[feature] 진단평가